@@ -19,6 +19,7 @@ dir = corpus
 [Prereq]
 CPAN::Meta::Converter     = 2.101550 ; improved downconversion
 Dist::Zilla               = 3 ; META 2 changes
+File::Copy                = 0
 File::HomeDir             = 0.81
 File::Temp                = 0
 List::Util                = 0
