@@ -18,7 +18,7 @@ package Dist::Zilla::Plugin::ArchiveRelease;
 #---------------------------------------------------------------------
 
 use 5.008;
-our $VERSION = '0.09';
+our $VERSION = '3.01';
 # This file is part of {{$dist}} {{$dist_version}} ({{$date}})
 
 =head1 SYNOPSIS
@@ -158,7 +158,9 @@ sub release
   my $dest = $self->directory->file($tgz->basename);
   my $destR = $self->pretty_path($dest);
 
-  rename $tgz, $dest or $self->log_fatal("Failed to move to $destR: $!");
+  require File::Copy;
+  File::Copy::move($tgz, $dest)
+        or $self->log_fatal("Failed to move to $destR: $!");
 
   $self->log("Moved to $destR");
 } # end release
